--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- Bush 3 -->
         <div class="layer-10"></div> 
 
-        <h3 class="total-count">Score: </h3>
+        <h3 class="total-count">Frogs count: </h3>
     </div>
 </body>
 </html>
